[gd_scene load_steps=15 format=3 uid="uid://ckbxxbpei0gui"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_ivc2f"]
[ext_resource type="Theme" uid="uid://6d80ndd154hq" path="res://Scenes and Scripts/UI/Info/Info.tres" id="1_ulo0d"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Info/interaction_information.gd" id="2_64w2u"]
[ext_resource type="Texture2D" uid="uid://byprdtpeldk57" path="res://Textures/Buttons/X_button_normal.png" id="3_82uvy"]
[ext_resource type="Texture2D" uid="uid://dkay3mveblu0j" path="res://Textures/UI/Information/informationTile.png" id="3_cr600"]
[ext_resource type="Texture2D" uid="uid://x7kuuopqw4yl" path="res://Textures/Buttons/X_button_highlight.png" id="4_sw30l"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="5_g1ia3"]
[ext_resource type="Shader" path="res://Resources/Shaders/outline_palette_swap.gdshader" id="5_wtqqg"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="9_vl7rp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_erdcx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bjjr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7oyg1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w00lg"]
shader = ExtResource("5_wtqqg")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/line_thickness = 2.0

[sub_resource type="FontVariation" id="FontVariation_yc77w"]
base_font = ExtResource("5_g1ia3")
spacing_top = -2
spacing_bottom = 3

[node name="InteractionInformation" type="Control" node_paths=PackedStringArray("GrabAreas") groups=["grabbable"]]
z_index = 6
z_as_relative = false
material = ExtResource("1_ivc2f")
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ulo0d")
script = ExtResource("2_64w2u")
GrabAreas = [NodePath("PanelContainer/TabContainer")]

[node name="PanelContainer" type="PanelContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 119.0
offset_bottom = 71.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_erdcx")

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
material = ExtResource("1_ivc2f")
use_parent_material = true
custom_minimum_size = Vector2(125, 70)
layout_mode = 2
theme = ExtResource("1_ulo0d")
clip_tabs = false
use_hidden_tabs_for_min_size = true

[node name="Quantum Numbers" type="PanelContainer" parent="PanelContainer/TabContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bjjr6")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Quantum Numbers"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = -3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TabContainer/Quantum Numbers/MarginContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("3_cr600")
expand_mode = 1
stretch_mode = 1

[node name="Quantum Numbers" type="GridContainer" parent="PanelContainer/TabContainer/Quantum Numbers"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 4

[node name="name" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
text = "NAME"

[node name="before" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(28, 2.08165e-12)
layout_mode = 2
text = "BEFORE"
horizontal_alignment = 1

[node name="after" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(28, 2.08165e-12)
layout_mode = 2
text = "AFTER"
horizontal_alignment = 1

[node name="space" type="Label" parent="PanelContainer/TabContainer/Quantum Numbers/Quantum Numbers"]
use_parent_material = true
custom_minimum_size = Vector2(3, 2.08165e-12)
layout_mode = 2

[node name="Other" type="PanelContainer" parent="PanelContainer/TabContainer"]
visible = false
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7oyg1")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Other"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -2
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = -3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TabContainer/Other/MarginContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("3_cr600")
expand_mode = 1
stretch_mode = 1

[node name="Other" type="GridContainer" parent="PanelContainer/TabContainer/Other"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="name" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
text = "PROPERTY"

[node name="data" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2

[node name="space" type="Label" parent="PanelContainer/TabContainer/Other/Other"]
use_parent_material = true
custom_minimum_size = Vector2(2, 2.08165e-12)
layout_mode = 2

[node name="NumberContainer" type="CenterContainer" parent="PanelContainer"]
use_parent_material = true
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Number" type="Label" parent="PanelContainer/NumberContainer"]
material = SubResource("ShaderMaterial_w00lg")
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_yc77w")
theme_override_font_sizes/font_size = 11
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 5

[node name="CloseButton" type="TextureButton" parent="PanelContainer/MarginContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_82uvy")
texture_pressed = ExtResource("4_sw30l")
texture_hover = ExtResource("4_sw30l")

[node name="ButtonSoundComponent" parent="PanelContainer/MarginContainer/CloseButton" instance=ExtResource("9_vl7rp")]
on_pressed = true

[connection signal="child_entered_tree" from="PanelContainer/TabContainer" to="." method="_on_tab_container_child_entered_tree"]
[connection signal="pressed" from="PanelContainer/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
